--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Nudrive</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="NuDrive details"
+    />
+
+    <title>NuDrive</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:title" content="NuDrive" />
+    <meta
+      property="og:description"
+      content="NuDrive details"
+    />
+    <meta property="og:image" content="" />
+    <meta name="twitter:image" content="" />
+  </head>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
+
+
+
